--- a/src/stylesheets/vars.scss
+++ b/src/stylesheets/vars.scss
@@ -59,5 +59,7 @@ $medium: 1680px;
 
 // Z-index
 $z-index: (
-    sync: 900
+    "sync": 900,
+    "flash": 1020,
+    "explain": 1010
 );
